force-app/main/default/objects/Transaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Inward</fullName><default>true</default><label>Inward</label></value>
            <value><fullName>Outward</fullName><default>false</default><label>Outward</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>