force-app/main/default/objects/Transaction__c/fields/Is_System_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Generated__c</fullName>
    <label>Is System Generated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>