force-app/main/default/objects/Transaction__c/fields/Loan__c.field-meta.xml
<CustomField>
    <fullName>Loan__c</fullName>
    <label>Loan</label>
    <type>Lookup</type>
    <referenceTo>Loan__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Loan_Transactions</relationshipName>
</CustomField>