force-app/main/default/objects/Transaction__c/fields/Loan_Installment__c.field-meta.xml
<CustomField>
    <fullName>Loan_Installment__c</fullName>
    <label>Loan Installment</label>
    <type>Lookup</type>
    <referenceTo>Loan_Installment__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>LoanInstallment_Transactions</relationshipName>
</CustomField>