force-app/main/default/objects/Transaction__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Cash</fullName><default>false</default><label>Cash</label></value>
            <value><fullName>UPI</fullName><default>false</default><label>UPI</label></value>
            <value><fullName>Bank_Transfer</fullName><default>false</default><label>Bank Transfer</label></value>
            <value><fullName>Card</fullName><default>false</default><label>Card</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>