force-app/main/default/objects/Transaction__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Contact_Transactions</relationshipName>
</CustomField>