force-app/main/default/objects/Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Down_Payment</fullName><default>false</default><label>Down Payment</label></value>
            <value><fullName>Owner_Contribution</fullName><default>false</default><label>Owner Contribution</label></value>
            <value><fullName>Loan_Disbursement</fullName><default>false</default><label>Loan Disbursement</label></value>
            <value><fullName>Loan_Repayment</fullName><default>false</default><label>Loan Repayment</label></value>
            <value><fullName>Interest_Payment</fullName><default>false</default><label>Interest Payment</label></value>
            <value><fullName>Maintenance_Expense</fullName><default>false</default><label>Maintenance Expense</label></value>
            <value><fullName>Insurance</fullName><default>false</default><label>Insurance</label></value>
            <value><fullName>Income_From_Asset</fullName><default>false</default><label>Income From Asset</label></value>
            <value><fullName>Return</fullName><default>false</default><label>Return</label></value>
            <value><fullName>Profit_Distribution</fullName><default>false</default><label>Profit Distribution</label></value>
            <value><fullName>Other_Expense</fullName><default>false</default><label>Other Expense</label></value>
            <value><fullName>Other_Income</fullName><default>false</default><label>Other Income</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>